# apd.aggregation

./: CHANGES.md  Pipfile  Yappi Profiling.ipynb  alembic.ini  setup.cfg
.github/workflows/: pythonapp.yml
src/apd/aggregation/: analysis.py  cli.py  collect.py  database.py  query.py  typing.py  utils.py
src/apd/aggregation/actions/: action.py  base.py  runner.py  source.py
src/apd/aggregation/alembic/versions/: 4b2df8a6e1ce_add_indexes_to_datapoints.py
tests/: conftest.py  test_actions_actions.py  test_actions_runner.py  test_analysis.py  test_cli.py  test_http_get.py  test_query.py  test_sensor_aggregation.py
