[mypy]
namespace_packages = True
mypy_path = src

[flake8]
max-line-length = 88

[metadata]
name = apd.aggregation
version = attr: apd.aggregation.VERSION
description = A programme that queries apd.sensor endpoints and aggregates their results.
long_description = file: README.md, CHANGES.md, LICENCE
long_description_content_type = text/markdown
keywords =
license = BSD
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
install_requires =
    sqlalchemy
    requests
    psycopg2


[options.packages.find]
where = src
